# guava-codegen

./: .env  Cargo.toml
src/: main.rs
src/db/: mod.rs
src/storage/: mod.rs
templates/: Cargo.toml.hbs
templates/migrations/: ddl.hbs
templates/src/: main.hbs
templates/src/drivers/: cache.hbs
templates/src/entities/: BO.hbs  OptionBO.hbs  mod.hbs
templates/src/macros/: mod.hbs
templates/src/macros/commands/: mod.hbs
templates/src/macros/repository/: mod.hbs
templates/src/repository/: mod.hbs  repository.hbs
templates/src/server/: error.hbs
templates/src/server/api/commands/: controller.hbs  controller_macro.hbs  mod.hbs
templates/src/server/api/model/: mod.hbs  model_create_vo.hbs  model_opt_vo.hbs  model_update_vo.hbs  model_vo.hbs
templates/src/service/: mod.hbs  service.hbs
