[package]
name = "guava-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={ version = "*"}
dotenv = { version = "0.15.0"}
rbs = "0.1.11"
rbatis = "4.0.35"
rbdc-pg = "0.1.16"
rbdc-mysql = "0.1.16"
rbdc-sqlite = "0.1.13"
log = "0.4.17"
fast_log = "1.5"
url = "2.3.1"
lazy_static = "1.4.0"
serde_json ={ version = "1.0.85"}
serde = { version = "1.0", features = ["derive"] }
tokio = { version =  "1.20.1", features = ["full"]}
yarte = {version =  "0.15", features = ["bytes-buf"]}
Inflector = "0.11.4"